# FLtrust

./: .gitignore  CMakeLists.txt  build.sh  run_srvr.sh
src/: clnt.cpp  mnistTrain.cpp  srvr.cpp
src/include/: globalConstants.hpp  mnistTrain.hpp
